--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "@carbon/icons-react": "^10.9.1",
     "@little-saga/rx-hooks": "^2.2.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@storybook/addon-docs": "6.0.0-beta.23",
-    "@storybook/addon-links": "6.0.0-beta.23",
-    "@storybook/addon-storysource": "6.0.0-beta.23",
-    "@storybook/react": "6.0.0-beta.23",
+    "@storybook/addon-docs": "6.0.0-rc.8",
+    "@storybook/addon-links": "6.0.0-rc.8",
+    "@storybook/addon-storysource": "6.0.0-rc.8",
+    "@storybook/react": "6.0.0-rc.8",
     "@types/carbon__icons-react": "^10.6.0",
     "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.149",
